cvm/overlay: (2/2) Fix gc/g1 StringDedup tests
Adapt gc/g1 StringDeduplication tests for JDK17 hotspot, using the
original JDK 8 implementation as baseline.

TestStringDeduplicationTools.java:
- Replace JDK 8 legacy GC log flags (PrintGCDetails,
  PrintStringDeduplicationStatistics) with JDK 17 Unified Logging
  (-Xlog:gc*,stringdedup*)
- Update GC output assertions to match the JDK 17 Unified Logging
  format
- Update StringDeduplicationAgeThreshold error message assertion to
  match JDK17 hotspot behavior
- Adapt InternedTest: Replace the JDK 8 implementation with JDK 17
  logic which verifies that interned strings are always deduplicated
  when being interned, and never after being interned
- Update testPrintOptions: Use -Xlog:gc*,stringdedup* (info) to verify
  concurrent deduplication log presence instead of using JDK 8 specific
  flags

Keep TestStringDeduplicationTableRehash.java excluded since JDK17
hotspot removed the string deduplication table rehash mechanism.